// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button.styles > LoadingSpinner SHOULD match snapshot > keyframe animation vector render 1`] = `
.c0 {
  animation: k0 0.6s linear infinite;
  border-radius: 50%;
  border: 2px solid #ffffff;
  border-top-color: transparent;
  height: 18px;
  width: 18px;
}

@keyframes k0 {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Button.styles > StyledButton SHOULD match snapshot > WHEN custom typography and text overrides are injected 1`] = `
.c0 {
  align-items: center;
  background: linear-gradient(     135deg,     #ff8b22,     #ef7e18   );
  border-radius: 6px;
  border: none;
  box-shadow: 0 4px 12px rgba(239, 126, 24, 0.3);
  color: #ffffff;
  cursor: pointer;
  display: flex;
  flex-direction: row;
  font-family: Outfit-Bold;
  font-size: 16px;
  font-weight: 800;
  gap: 8px;
  height: 44px;
  justify-content: center;
  padding: 0 24px;
  text-transform: uppercase;
  transition: opacity 0.2s,transform 0.1s;
  width: 100%;
}

.c0:hover {
  opacity: 0.95;
}

.c0:active {
  transform: scale(0.98);
}

.c0:disabled {
  background: #434645;
  box-shadow: none;
  color: #999e9c;
  cursor: not-allowed;
  transform: none;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`Button.styles > StyledButton SHOULD match snapshot > WHEN invert property layout configuration is applied 1`] = `
.c0 {
  align-items: center;
  background: linear-gradient(     135deg,     #ff8b22,     #ef7e18   );
  border-radius: 6px;
  border: none;
  box-shadow: 0 4px 12px rgba(239, 126, 24, 0.3);
  color: #ffffff;
  cursor: pointer;
  display: flex;
  flex-direction: row-reverse;
  font-family: Outfit-Regular;
  font-size: 14px;
  font-weight: 600;
  gap: 8px;
  height: 44px;
  justify-content: center;
  padding: 0 24px;
  text-transform: none;
  transition: opacity 0.2s,transform 0.1s;
  width: 100%;
}

.c0:hover {
  opacity: 0.95;
}

.c0:active {
  transform: scale(0.98);
}

.c0:disabled {
  background: #434645;
  box-shadow: none;
  color: #999e9c;
  cursor: not-allowed;
  transform: none;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`Button.styles > StyledButton SHOULD match snapshot > WHEN rendering standard background gradient layout 1`] = `
.c0 {
  align-items: center;
  background: linear-gradient(     135deg,     #ff8b22,     #ef7e18   );
  border-radius: 6px;
  border: none;
  box-shadow: 0 4px 12px rgba(239, 126, 24, 0.3);
  color: #ffffff;
  cursor: pointer;
  display: flex;
  flex-direction: row;
  font-family: Outfit-Regular;
  font-size: 14px;
  font-weight: 600;
  gap: 8px;
  height: 44px;
  justify-content: center;
  padding: 0 24px;
  text-transform: none;
  transition: opacity 0.2s,transform 0.1s;
  width: 100%;
}

.c0:hover {
  opacity: 0.95;
}

.c0:active {
  transform: scale(0.98);
}

.c0:disabled {
  background: #434645;
  box-shadow: none;
  color: #999e9c;
  cursor: not-allowed;
  transform: none;
}

<div>
  <button
    class="c0"
  />
</div>
`;
